--- a/music_player/pubspec.yaml
+++ b/music_player/pubspec.yaml
@@ -27,6 +27,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/appicon/music_player.png"
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
