Worked on flutter app

--- a/flutter_more/pubspec.yaml
+++ b/flutter_more/pubspec.yaml
@@ -1,14 +1,16 @@
 name: flutter_more
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.6
+  http: ^0.13.1
 
 dev_dependencies:
   flutter_test:
