--- a/flutter_arc/pubspec.yaml
+++ b/flutter_arc/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  cached_network_image: ^3.4.1
+  connectivity_plus: ^6.1.4
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
